# patterns

./: .clang-format  .gitignore  CMakeLists.txt  README.md
builder/: CMakeLists.txt  README.md  main.cpp  request_builder.cpp  request_builder.h
factory/: CMakeLists.txt  README.md  main.cpp  optimizer.h
pimpl/: CMakeLists.txt  README.md  http_client.cpp  http_client.h  main.cpp
singleton/: CMakeLists.txt  README.md  logger.h  main.cpp
strategy/: CMakeLists.txt  README.md  main.cpp  tree.cpp  tree.h
